# ret2shell

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.dup  Cargo.toml  Containerfile  LICENSE  README.md  biome.json  flake.nix  package.json  release-image.fish  release-image.sh
.devcontainer/: 00-post-start.sh  Dockerfile  README.md  apply-kubeconfig.sh  devcontainer.json  gen-license.sh  install-deps.sh  setup-zsh.sh  up-dev.sh
.devcontainer/devtools/: chalctl  ret2dev
.github/: dependabot.yml  setup-env.sh
.github/workflows/: binary.yml  clippy.yml  docker.yml  helm.yml  license.yml  release.yml  scripts.release-image.yml  server.yml  web.yml
cloud/: gke-gcloud-auth-plugin-proxy
cloud/node-inspecter/: Dockerfile  go.mod  main.go
config/: README.md  config.sample.toml
crates/auditor/: Cargo.toml
crates/auditor/src/: filter.rs  flag.rs  lib.rs
crates/automate/: Cargo.toml
crates/bucket/: Cargo.toml
crates/bucket/arch/example_game/: config.toml
crates/bucket/arch/example_game/challenges/example_challenge/: config.toml  env.toml
crates/bucket/arch/example_game/challenges/example_challenge/checker/: README.md  main.rx
crates/bucket/arch/example_game/challenges/example_challenge/images/: README.md
crates/bucket/arch/example_game/challenges/example_challenge/mapped/: README.md
crates/bucket/arch/example_game/challenges/example_challenge/src/: .gitkeep
crates/bucket/arch/example_game/challenges/example_challenge/static/: README.md
crates/bucket/src/: challenge.rs  game.rs  git.rs  lib.rs  traits.rs  util.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  traits.rs
crates/captcha/: Cargo.toml
crates/captcha/src/: hcaptcha.rs  image.rs  lib.rs  main.rs  pow.rs  recaptcha.rs  traits.rs  utils.rs
crates/checker/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
crates/cli/src/commands/: account.rs  api.rs  article.rs  auth.rs  calendar.rs  challenge.rs  cluster.rs  common.rs  game.rs  media.rs  mod.rs  ping.rs  platform.rs  rpc.rs  submission.rs  team.rs  user.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs  lifecycle.rs  manager.rs  registry.rs  traffic.rs  traits.rs
crates/config/: Cargo.toml
crates/config/src/: auditor.rs  auth.rs  automate.rs  bucket.rs  cache.rs  captcha.rs  cluster.rs  database.rs  email.rs  lib.rs  logging.rs  media.rs  queue.rs  server.rs  traits.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/entities/: article.rs  audit.rs  calendar.rs  challenge.rs  chat.rs  comment.rs  config.rs  extra.rs  game.rs  game_registry_source.rs  game_release.rs  game_remote_sync.rs  game_sync_job.rs  hint.rs  instance.rs  institute.rs  ip.rs  koh_award.rs  koh_event.rs  koh_identifier.rs  koh_state.rs  media.rs  mod.rs  notification.rs  oauth.rs  oauth_provider.rs  policy.rs  submission.rs  team.rs  user.rs  user2_ip.rs  user2_team.rs
crates/database/src/entities/awd/: awd_instance.rs  awd_round.rs  awd_state.rs  awd_steal.rs  awdp_award.rs  awdp_solve.rs  awdp_state.rs  mod.rs
crates/database/src/entities/isw/: isw_assignment.rs  isw_flag.rs  isw_host.rs  isw_range.rs  isw_range_template.rs  isw_vm.rs  isw_vpn_peer.rs  mod.rs
crates/email/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  traits.rs  utils.rs
crates/event/: Cargo.toml
crates/event/src/: events.rs  lib.rs  traits.rs  worker.rs
crates/isw/: Cargo.toml
crates/isw-agent/: Cargo.toml  agent.sample.toml
crates/isw-agent/src/: main.rs  registry.rs  tls.rs  vmrun.rs  wg.rs
crates/isw/src/: client.rs  lib.rs  manager.rs  protocol.rs
crates/keygen/: Cargo.toml
crates/license/: Cargo.toml
crates/license/src/: codec.rs  lib.rs  main.rs
crates/logger/: Cargo.toml
crates/media/: Cargo.toml
crates/media/src/: lib.rs  mime_util.rs  traits.rs  utils.rs
crates/migrator/: Cargo.toml
crates/migrator/src/: lib.rs  main.rs
crates/migrator/src/migrations/: m_20230101_000001_create_config.rs  m_20240101_000001_create_institute.rs  m_20240101_000002_create_user.rs  m_20240101_000003_create_oauth.rs  m_20240101_000004_create_ip.rs  m_20240101_000005_link_ip_user.rs  m_20240101_000006_create_policy.rs  m_20240102_000001_create_article.rs  m_20240102_000002_create_comment.rs  m_20240102_000003_create_calendar.rs  m_20240103_000001_create_media.rs  m_20240104_000001_create_game.rs  m_20240104_000002_create_notification.rs  m_20240104_000003_create_team.rs  m_20240104_000004_create_challenge.rs  m_20240104_000005_create_hint.rs  m_20240104_000006_create_submission.rs  m_20240104_000007_link_team_user.rs  m_20240104_000008_create_extra.rs  m_20240104_000009_create_audit.rs  m_20240104_000010_create_chat.rs  m_20240105_000001_create_instance.rs  m_20241122_000003_game_cluster_configs.rs  m_20241220_000001_game_award_rates.rs  m_20241226_000001_game_traffic.rs  m_20250226_000001_archive_policy.rs  m_20250704_000001_game_env_limit.rs  m_20260310_000001_game_sync_phase1.rs  m_20260703_000001_create_koh.rs  m_20260704_000001_game_env_limit.rs  m_20260706_000001_create_isw.rs  m_20260707_000001_create_awd.rs  mod.rs
crates/oauth/: Cargo.toml
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs  traits.rs
crates/registrar/: Cargo.toml
crates/registrar/src/: lib.rs
crates/server/: Cargo.toml  build.rs
deploy/: build.fish  compose.dev.yml  compose.yml  dev_down.fish  dev_up.fish  docker-compose.dev.yml  nginx-http.dev.conf
docs/: game-registry-sync-checklist.md  game-registry-sync-design.md  game-registry-sync-implementation-phases.md  game-registry-sync-validation-playbook.md  software-copyright-application.md
keygen/: Cargo.toml
server/: Cargo.toml  Containerfile
web/: .env  .prettierignore  .prettierrc  README.md  biome.json  farm.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.mjs  tailwind.config.mts  tailwind.config.ts  tsconfig.json  vite.config.mts  vite.config.ts
(+949 files in other folders)
