[package]
description = "Auditor for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-auditor"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
aho-corasick = { workspace = true }
r2s-config   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }

[lib]
path = "src/lib.rs"
