[package]
description = "Bucket storage for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-bucket"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
chrono     = { workspace = true }
deunicode  = { workspace = true }
heck       = { workspace = true }
regex      = { workspace = true }
ring       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
