[package]
description = "Cache for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-cache"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
fred       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
