[package]
description = "Captcha generator for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-captcha"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
async-trait = { workspace = true }
biosvg      = { workspace = true }
hex         = { workspace = true }
nanoid      = { workspace = true }
ring        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-captcha"
path = "src/main.rs"
