[package]
description = "Command line client for Ret2Shell."
name        = "r2s-cli"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
clap         = { workspace = true }
hex          = { workspace = true }
r2s-database = { workspace = true }
reqwest      = { workspace = true }
ring         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
toml         = { workspace = true }

[[bin]]
name = "r2s-cli"
path = "src/main.rs"
