[package]
name = "r2s-cluster"
version = "3.0.7"
edition = "2021"
rust-version = "1.79.0"
description = "Cluster manager for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://ret.sh.cn/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
kube = { version = "0.93", features = [
  "config",
  "client",
  "rustls-tls",
  "runtime",
  "derive",
  "ws",
] }
axum = { version = "0.7", features = ["ws", "http2", "tower-log", "tracing"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
num-derive = "0.4"
num-traits = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures-io = "0.3"
nanoid = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
wsrx = { version = "0.2", features = ["server"] }

r2s-config = { version = "3", path = "../config" }

[lib]
path = "src/lib.rs"
