[package]
description = "Config provider for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-config"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"] # required by sea-orm `FromJsonResult`

[dependencies]
sea-orm    = { workspace = true, features = ["macros", "with-json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }

[lib]
path = "src/lib.rs"
