[package]
description = "Database for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-database"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
  "serde_json",
  "tracing",
  "num-traits",
] # required by sea-orm `FromJsonResult`

[dependencies]
chrono = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
tracing = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
