[package]
description = "Base scripting engine for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-engine"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
chrono       = { workspace = true }
once_cell    = { workspace = true }
ret2script   = { workspace = true }
rune         = { workspace = true }
rune-modules = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
