[package]
description = "Event pusher for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-event"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
async-nats = { workspace = true }
axum       = { workspace = true }
chrono     = { workspace = true }
futures    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

r2s-database = { workspace = true }
r2s-queue    = { workspace = true }

[lib]
path = "src/lib.rs"
