[package]
description = "Per-host ISW range agent (r2s-isw-agent) for Ret2Shell - BITs2CTF fork."
name        = "r2s-isw-agent"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
anyhow             = { workspace = true }
axum               = { workspace = true }
base64             = { workspace = true }
clap               = { workspace = true }
ring               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Fork-owned crate: mTLS listener (optional). All already present transitively via
# the workspace, so no new crates enter the tree — only direct deps of this fork crate.
hyper-util   = { version = "0.1", features = ["server", "server-auto", "tokio", "service"] }
rustls       = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

r2s-isw = { workspace = true }

[[bin]]
name = "r2s-isw-agent"
path = "src/main.rs"
