[package]
description = "License checker for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-license"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
chrono     = { workspace = true }
clap       = { workspace = true }
ring       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-license"
path = "src/main.rs"
