[package]
name = "r2s-logger"
version = "0.5.6"
edition = "2021"
rust-version = "1.76.0"
description = "Logger for Ret2Shell - A feature-riches CTF challenge platform."
authors = ["Reverier-Xu <reverier.xu@woooo.tech>"]
publish = false
homepage = "https://r2s.woooo.tech/"
keywords = ["ctf", "challenge", "platform", "security", "education"]
resolver = "2"

[dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

r2s-auditor = { version = "0.5.6", path = "../auditor" }
r2s-bucket = { version = "0.5.6", path = "../bucket" }
r2s-cache = { version = "0.5.6", path = "../cache" }
r2s-captcha = { version = "0.5.6", path = "../captcha" }

[lib]
path = "src/lib.rs"
