[package]
description = "Media storage for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-media"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
hex       = { workspace = true }
image     = { workspace = true }
infer     = { workspace = true }
mime      = { workspace = true }
nanoid    = { workspace = true }
ring      = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
tracing   = { workspace = true }

r2s-config   = { workspace = true }
r2s-database = { workspace = true }

[lib]
path = "src/lib.rs"
