[package]
description = "Database migrator for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-migrator"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "r2s-migrator"
path = "src/main.rs"
