[package]
description = "Message queue for Ret2Shell - A feature-riches CTF challenge platform."
name        = "r2s-queue"

authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
publish      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"] # required by sea-orm `FromJsonResult`

[dependencies]
async-nats = { workspace = true }
chrono     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

r2s-config = { workspace = true }

[lib]
path = "src/lib.rs"
